package jobOpeningManagement.repositories;

import eapli.framework.domain.repositories.DomainRepository;
import jobOpeningManagement.domain.CompanyCode;
import jobOpeningManagement.domain.Customer;

public interface CustomerRepository extends DomainRepository<CompanyCode, Customer> {


}
