@startuml

package Presentation {
    class RegisterJobOpeningUI
}

package Domain {
    class JobOpening
}

package Persistence {
    class JpaJobOpeningRepository
    class JpaCustomerRepository
    interface JobOpeningRepository
    interface CustomerRepository
}

package Application {
    class RegisterJobOpeningController
    class ListCustomersService
}



Presentation.RegisterJobOpeningUI --> Application.RegisterJobOpeningController
Application.RegisterJobOpeningController --> Persistence.JobOpeningRepository
Persistence.JobOpeningRepository <|-- Persistence.JpaJobOpeningRepository
Persistence.CustomerRepository <|-- Persistence.JpaCustomerRepository
Application.RegisterJobOpeningController --> Application.ListCustomersService
Application.ListCustomersService --> Persistence.CustomerRepository
Application.RegisterJobOpeningController ---> Domain.JobOpening

@enduml